--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,15 @@
 #!/usr/bin/make -f
-%:
-	dh $@
 
-override_dh_auto_test:
-	echo TEST SUITE DISABLED
+%:
+	dh $@  --with autotools-dev,systemd
+
+override_dh_auto_configure:
+	dh_auto_configure -- --with-user=saned --with-group=scanner
+
+override_dh_auto_install:
+	dh_auto_install
+	$(RM) debian/scanbd/etc/scanbd/example.script
+	$(RM) debian/scanbd/etc/scanbd/scanadf.script
+
+override_dh_installinit:
+	dh_installinit --init-script=integration/scanbd.debian
