--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 %:
-	dh $@  --with autotools-dev,systemd
+	dh $@  --with autotools-dev
 
 override_dh_auto_configure:
 	dh_auto_configure -- --with-user=saned --with-group=scanner
