--- a/debian/control
+++ b/debian/control
@@ -2,9 +2,10 @@ Source: scanbd
 Section: misc
 Priority: extra
 Maintainer: Rolf Leggewie <foss@rolf.leggewie.biz>
-Build-Depends: debhelper (>= 9), libconfuse-dev,
+Build-Depends: debhelper (>= 9), autotools-dev,
+ libconfuse-dev,
  libsane-dev, libudev-dev, libusb-dev
-Standards-Version: 3.9.4
+Standards-Version: 3.9.5
 Homepage: http://scanbd.sf.net/
 Vcs-Browser: http://git.debian.org/?p=collab-maint/pastebinit.git
 Vcs-Git: git://git.debian.org/collab-maint/pastebinit.git
