--- a/debian/control
+++ b/debian/control
@@ -7,8 +7,8 @@ Build-Depends: debhelper (>= 9), autotools-dev,
  libsane-dev, libudev-dev, libusb-dev
 Standards-Version: 3.9.5
 Homepage: http://scanbd.sf.net/
-Vcs-Browser: http://git.debian.org/?p=collab-maint/pastebinit.git
-Vcs-Git: git://git.debian.org/collab-maint/pastebinit.git
+Vcs-Browser: http://git.debian.org/?p=collab-maint/scanbd.git
+Vcs-Git: git://git.debian.org/collab-maint/scanbd.git
 
 Package: scanbd
 Architecture: any
