Imported Upstream version 1.4.0

--- a/conf/scanbd.conf
+++ b/conf/scanbd.conf
@@ -1,5 +1,5 @@
 /*
- * $Id: scanbd.conf 174 2013-08-12 06:23:39Z wimalopaan $
+ * $Id: scanbd.conf 191 2013-09-23 09:55:27Z wimalopaan $
  *
  *  scanbd - KMUX scanner button daemon
  *
@@ -34,8 +34,10 @@ global {
         
         # drop priviliges to this user
         #=============================
-        # Linux: 
-        # user    = saned # root
+        # Linux (most distributions use the saned user):
+        # user    = saned
+        # ArchLinux (ArchLinux doesn't have saned user)
+        # user    = daemon
         # *BSD
         # user    = root
         user    = saned
@@ -57,18 +59,30 @@ global {
         saned_opt  = {} # string-list
         saned_env  = { "SANE_CONFIG_DIR=/usr/local/etc/scanbd" } # list of environment vars for saned
 
-        # Scriptdir specifies where scanbs normally looks for scripts.
+        # Scriptdir specifies where scanbd normally looks for scripts.
         # The scriptdir option can be defined as: 
         #   - a path relative to the configuations (<path>/etc/scanbd) directory
         #   - an abosolute path
         # Examples:
         # scriptdir = scripts 
-        # sets scriptdir to <path>/etc/scripts.
+        # sets scriptdir to <path>/etc/scanbd/scripts.
         # scriptdir = /some/path
         # sets scriptdir to the specified absolute path
         # Default scriptdir is <path>/etc/scanbd, this is normally appropriate
         # scriptdir = 
         
+        # Scripts to execute upon device insertion/removal.
+        # It can be necessary to load firmware into the device when it is first
+        # inserted. For example, scanbuttond backend does not know how to load 
+        # scanner firmware, and it can be rectified by making a custom script.
+        # A simple command like "scanimage -L" in an example insert.script 
+        # invokes saned and it loads the appropriate firmware if necessary.
+        # These scripts receive environmental variables named in the "environment" subsection:
+        # SCANBD_DEVICE - device name (fixed string "dbus device" for dbus notification)
+        # SCANBD_ACTION - "insert" or "remove", so one script can be used.
+        # device_insert_script = "insert.script"
+        # device_remove_script =
+
         # scanbuttond_backends_dir sets the path where scanbd looks for the scanbuttond backends 
 	# It can be defined as relative path, starting from the scanbd config directory or
         # as an absolute path
@@ -113,7 +127,7 @@ global {
         # <script> is the full pathname (do not include any parameters)
         # if parameters are needed, write a script
         
-        # since we can have only a most one action for each option, the action-script 
+        # since we can have only at most one action for each option, the action-script
         # can use the function definition (see above) to distinguish different tasks 
         # (e.g. use the env-var SCANBD_FUNCTION defined above)
         
@@ -181,8 +195,8 @@ global {
 }
 
 # include
-# include another file at this point. This may only occur outside general and devices blocks
-# an include statement may be relative (to the direcory where scanbd.conf is located or aboslute
+# include another file at this point. This may only occur outside general and devices blocks.
+# an include statement may be relative to the direcory where scanbd.conf is located or aboslute
 # include("scanner.d/myscanner.conf")
 # include("/my/long/path/myscanner.conf")
 
