control: add ${misc:Depends} for scanbuttond binary package

--- a/debian/control
+++ b/debian/control
@@ -35,7 +35,7 @@ Description: Scanner button daemon
 
 Package: scanbuttond
 Architecture: all
-Depends: scanbd
+Depends: scanbd, ${misc:Depends}
 Section: oldlibs
 Priority: extra
 Description: Dummy transitional package - scanbuttond to scanbd
