postinst,postrm: update /etc/inetd.conf via update-inetd
add update-inetd to run-time dependencies which normally shouldn't be
necessary but rlinetd provides inet-superserver and does not depend
on it unlike all other packages that provide this virtual package.

--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Package: scanbd
 Architecture: any
 Depends: sane-utils,
  openbsd-inetd | inet-superserver,
+ update-inetd,
 # reconf-inetd,
  ${shlibs:Depends},
  ${misc:Depends},
