--- a/conf/scanbd.conf
+++ b/conf/scanbd.conf
@@ -1,9 +1,9 @@
 /*
- * $Id: scanbd.conf 191 2013-09-23 09:55:27Z wimalopaan $
+ * $Id: scanbd.conf 210 2015-06-09 06:51:58Z wimalopaan $
  *
  *  scanbd - KMUX scanner button daemon
  *
- *  Copyright (C) 2008 - 2013  Wilhelm Meier (wilhelm.meier@fh-kl.de)
+ *  Copyright (C) 2008 - 2015  Wilhelm Meier (wilhelm.meier@fh-kl.de)
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -57,7 +57,7 @@ global {
         # the saned executable for manager-mode
         saned   = "/usr/sbin/saned"
         saned_opt  = {} # string-list
-        saned_env  = { "SANE_CONFIG_DIR=/usr/local/etc/scanbd" } # list of environment vars for saned
+		saned_env  = { "SANE_CONFIG_DIR=/etc/scanbd" } # list of environment vars for saned
 
         # Scriptdir specifies where scanbd normally looks for scripts.
         # The scriptdir option can be defined as: 
@@ -69,7 +69,7 @@ global {
         # scriptdir = /some/path
         # sets scriptdir to the specified absolute path
         # Default scriptdir is <path>/etc/scanbd, this is normally appropriate
-        # scriptdir = 
+		scriptdir = /etc/scanbd/scripts
         
         # Scripts to execute upon device insertion/removal.
         # It can be necessary to load firmware into the device when it is first
@@ -84,11 +84,11 @@ global {
         # device_remove_script =
 
         # scanbuttond_backends_dir sets the path where scanbd looks for the scanbuttond backends 
-	# It can be defined as relative path, starting from the scanbd config directory or
+		# It can be defined as relative path, starting from the scanbd config directory or
         # as an absolute path
         # Default is <libdir>/scanbd/scanbutond/backends
         # Example
-	# scanbuttond_backends_dir = "/usr/local/lib/scanbd/scanbuttond/backends"
+		# scanbuttond_backends_dir = "/usr/local/lib/scanbd/scanbuttond/backends"
 
         # poll timeout in [ms]
         # (for polling the devices)
@@ -196,7 +196,7 @@ global {
 
 # include
 # include another file at this point. This may only occur outside general and devices blocks.
-# an include statement may be relative to the direcory where scanbd.conf is located or aboslute
+# an include statement may be relative to the direcory where scanbd.conf is located or absolute
 # include("scanner.d/myscanner.conf")
 # include("/my/long/path/myscanner.conf")
 
