--- a/integration/systemd/scanbm@.service
+++ b/integration/systemd/scanbm@.service
@@ -2,7 +2,7 @@
 #
 #  scanbd - KMUX scanner button daemon
 #
-#  Copyright (C) 2008 - 2013  Wilhelm Meier (wilhelm.meier@fh-kl.de)
+#  Copyright (C) 2008 - 2015  Wilhelm Meier (wilhelm.meier@fh-kl.de)
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -23,8 +23,8 @@ Description=Scanner Service
 Requires=scanbm.socket
 
 [Service]
-ExecStart=/usr/sbin/scanbm 
-User=saned
-Group=saned
+ExecStart=/usr/sbin/scanbm -c /etc/scanbd/scanbd.conf
+User=daemon
+Group=scanner
 StandardInput=socket
 Environment=SANE_CONFIG_DIR=/etc/scanbd
