--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-export DEB_CFLAGS_MAINT_APPEND = -Wno-error=clobbered
+export DEB_CFLAGS_MAINT_APPEND = -Wno-error=clobbered -Wno-error=missing-field-initializers
 
 %:
 	dh $@  --with autotools-dev
