Imported Upstream version 1.5.1

--- a/conf/scanbd.conf
+++ b/conf/scanbd.conf
@@ -1,9 +1,9 @@
 /*
- * $Id: scanbd.conf 213 2015-10-05 06:52:50Z wimalopaan $
+ * $Id: scanbd.conf 241 2017-04-19 07:53:25Z wimalopaan $
  *
  *  scanbd - KMUX scanner button daemon
  *
- *  Copyright (C) 2008 - 2015  Wilhelm Meier (wilhelm.meier@fh-kl.de)
+ *  Copyright (C) 2008 - 2017 Wilhelm Meier (wilhelm.wm.meier@googlemail.com)
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -208,3 +208,4 @@ include(scanner.d/hp.conf)
 include(scanner.d/pixma.conf)
 include(scanner.d/snapscan.conf)
 include(scanner.d/canon.conf)
+include(scanner.d/plustek.conf)
