--- a/Makefile.conf
+++ b/Makefile.conf
@@ -1,8 +1,8 @@
-# $Id: Makefile.conf 213 2015-10-05 06:52:50Z wimalopaan $
+# $Id: Makefile.conf 241 2017-04-19 07:53:25Z wimalopaan $
 #
 #  scanbd - KMUX scanner button daemon
 #
-#  Copyright (C) 2008 - 2012  Wilhelm Meier (wilhelm.meier@fh-kl.de)
+#  Copyright (C) 2008 - 2012  Wilhelm Meier (wilhelm.wm.meier@googlemail.com)
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
