--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -1,8 +1,8 @@
-# $Id: Makefile.conf.in 176 2013-08-12 08:15:23Z wimalopaan $
+# $Id: Makefile.conf.in 241 2017-04-19 07:53:25Z wimalopaan $
 #
 #  scanbd - KMUX scanner button daemon
 #
-#  Copyright (C) 2008 - 2012  Wilhelm Meier (wilhelm.meier@fh-kl.de)
+#  Copyright (C) 2008 - 2012  Wilhelm Meier (wilhelm.wm.meier@googlemail.com)
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
