--- a/Makefile.simple
+++ b/Makefile.simple
@@ -1,8 +1,8 @@
-# $Id: Makefile.simple 203 2015-02-04 08:05:20Z wimalopaan $
+# $Id: Makefile.simple 241 2017-04-19 07:53:25Z wimalopaan $
 #
 #  scanbd - KMUX scanner button daemon
 #
-#  Copyright (C) 2008 - 2015  Wilhelm Meier (wilhelm.meier@fh-kl.de)
+#  Copyright (C) 2008 - 2016 Wilhelm Meier (wilhelm.meier@fh-kl.de)
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -59,6 +59,9 @@ scanbd:
 
 scanbuttond:
 	$(MAKE) -f Makefile.simple -C src/scanbuttond all
+
+test:
+	$(MAKE) -C src/test all
 
 doc:
 	 $(MAKE) -f Makefile.simple -C doc all
