--- a/conf/scanner.d/avision.conf
+++ b/conf/scanner.d/avision.conf
@@ -1,9 +1,9 @@
 /*
- * $Id: avision.conf 203 2015-02-04 08:05:20Z wimalopaan $
+ * $Id: avision.conf 241 2017-04-19 07:53:25Z wimalopaan $
  *
  *  scanbd - KMUX scanner button daemon
  *
- *  Copyright (C) 2008 - 2015  Wilhelm Meier (wilhelm.meier@fh-kl.de)
+ *  Copyright (C) 2008 - 2017 Wilhelm Meier (wilhelm.wm.meier@googlemail.com)
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
