--- a/conf/scanner.d/plustek.conf
+++ b/conf/scanner.d/plustek.conf
@@ -1,9 +1,9 @@
 /*
- * $Id: slog.h 241 2017-04-19 07:53:25Z wimalopaan $
+ * $Id: snapscan.conf 154 2013-01-06 07:24:56Z wimalopaan $
  *
  *  scanbd - KMUX scanner button daemon
  *
- *  Copyright (C) 2008 - 2017 Wilhelm Meier (wilhelm.wm.meier@googlemail.com)
+ *  Copyright (C) 2008 - 2013  Wilhelm Meier (wilhelm.wm.meier@googlemail.com)
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -20,20 +20,23 @@
  *  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
-#ifndef SLOG_H
-#define SLOG_H
+device plustek {
+        
+        # the device matching string
+        filter = "plustek" # regex
 
-#include "common.h"
+        # the device description
+        desc = "Canon N650"
 
-#define SLOG_ERROR 1
-#define SLOG_WARN  2
-#define SLOG_INFO  3
-#define SLOG_DEBUG 4
+        action send {
+              filter = "^button.*"
+              desc   = "Button"
 
-extern bool debug;
-extern unsigned int debug_level;
+                # script must be an relative path starting from scriptdir (see above), 
+                # or an absolute pathname. 
+                # It must contain the path to the action script without arguments
+                # Absolute path example: script = "/some/path/foo.script 
+                script = "test.script"
+        }
+}
 
-void slog(unsigned int level, const char *format, ...);
-void slog_init(const char *string);
-
-#endif
